--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ django-debug-toolbar==0.9.1
 django==1.3.1
 MySQL-python==1.2.3
 ply==3.4
+
+# original bootstrap repo with bugs
+# git+git://github.com/earle/django-bootstrap.git#egg=bootstrap
+
+# fixed bootstrap repo
+git+git://github.com/pronebird/django-bootstrap.git#egg=bootstrap
