--- a/localsettings.py.example
+++ b/localsettings.py.example
@@ -26,7 +26,8 @@ INTERNAL_IPS = ('127.0.0.1',)
 
 INSTALLED_APPS += (
 	'debug_toolbar',
+	'bootstrap',
 )
 DEBUG_TOOLBAR_CONFIG = {
-    'INTERCEPT_REDIRECTS': False,
+	'INTERCEPT_REDIRECTS': False,
 }
