--- a/localsettings.py.example
+++ b/localsettings.py.example
@@ -28,6 +28,12 @@ INSTALLED_APPS += (
 	'debug_toolbar',
 	'bootstrap',
 )
+TEMPLATE_CONTEXT_PROCESSORS = (
+	'django.contrib.auth.context_processors.auth',
+	'web.context_processors.django_version',
+	'web.context_processors.python_version',
+	'web.context_processors.unfinished_tickets_count',
+)
 DEBUG_TOOLBAR_CONFIG = {
 	'INTERCEPT_REDIRECTS': False,
 }
